
= Changes =
== Version 1.50 ==
  * Fixed Issue 155: category totals often don't update correctly
  * Fixed Issue 151: handling of disabled formats entirely
  * Fixed Issue 150: sub date/time options in preferences menu do not auto-disable
  * Issue 140: View image captions
  * Fixed rotation of article with dark background
  * Fixed Issue 145: starred list won't fully sync

== Version 1.49 ==
  * Added a preference to "Invert browsing articles"
  * Fixed problems with the new preference-dialog
  * Added confirmation dialog to unsubscribe from feed
  
== Version 1.48 (1) ==
  * New Preference-Layout, new Icons, fixed compatibility with old devices
  * Fixed progressbar for ImageCache
  * Fixed Exceptions when returning from article
  * Fixed problem with ImageCache
  * Added spanish translation (thanks to Eduardo Ruiz from http://www.edubox.org)

== Version 1.47 (2) ==
  * Fixed Activity-Indicators
  * Implemented "Subscribe to Feed" and "Unsubscribe" (only Server > 1.7.6)
  * Added Paste-Button for URLs in Subscribe-View
  * Dark background now without white border
  * Link-color for dark background set to light blue
  * Articleheader layout and borders fixed
  * Removed unnecessary preferences
  * Bugfixes

== Version 1.46 (3) ==
  * Fixed bugs in new connection method
  * Rewrote code for swipe, should work better now on all screen sizes
  * New Preference: Scale article font by n% (Fixed for old api levels)
  * Fixed bugs in tasker integration
  * Disabled automatic vacuum, this can still be started manually via preferences
  * Added long-press options in article, share article and (if selected an URL) share URL.
  * Fixed HTML entities in titles (only for newly fetched articles, I store them with decoded title instead of decoding it everytime it is displayed)

== Version 1.45 ==
  * Remember reading position inside articles
  * Reduce memory usage
  * Several bugfixes

== Version 1.44 ==